# speculare-client

./: .gitignore  CHANGELOG.md  Cargo.toml  Example.toml  LICENSE  README.md  client.example.config  release-please-config.json
.github/workflows/: ci.yml  clippy.yml  common.yml  create-release.yaml  license-update.yml  linux.yml  macos.yml  rust.yml  upload-to-release.yaml
benches/: cpu_bench.rs  disks_bench.rs  global_bench.rs  memory_bench.rs  miscs_bench.rs  network_bench.rs  sensors_bench.rs  users_bench.rs
configs/: be.s19.speculare.plist  exemple.config
plugins/active_users/src/: lib.rs
src/: clap.rs  client.rs  config_mode.rs  gather.rs  gathering.rs  logger.rs  main.rs  models.rs  process.rs  request.rs  setup_config.rs  utils.rs
src/harvest/: data_harvest.rs  mod.rs
src/metrics/: cpu.rs  disks.rs  lib.rs  memory.rs  miscs.rs  mod.rs  models.rs  network.rs  sensors.rs  users.rs
src/options/: config.rs  config_prompt.rs  mod.rs  plugins_init.rs
src/utils/: config.rs  mod.rs  request.rs
