[package]
name = "speculare-client"
version = "0.0.4"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
env_logger = "0.9"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = "0.22"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.6"
sys_metrics = { git = "https://github.com/Martichou/sys_metrics" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "speculare-client"
path = "src/main.rs"
bench = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1