[package]
name = "speculare-client"
version = "0.0.5"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
clap = { version = "3.1", features = ["derive"] }
clap-verbosity-flag = "1.0"
env_logger = "0.9"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.23", features = ["rustls-native-certs", "http2"]}
lazy_static = "1.4"
log = "0.4"
serde_json = "1.0"
simd-json = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha1_smol = { version = "1.0", features = ["std"] }
sys_metrics = { git = "https://github.com/Martichou/sys_metrics" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
auth = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1