[package]
name = "speculare-client"
version = "0.1.0"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
clap = { version = "4.2", features = ["derive"] }
clap-verbosity-flag = "2.0"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.24", features = ["rustls-native-certs", "http2"]}
log = "0.4"
once_cell = "1.14"
serde_json = "1.0"
simd-json = "0.14"
serde = { version = "1.0", features = ["derive"] }
sha1_smol = { version = "1.0", features = ["std"] }
sys_metrics = { git = "https://github.com/Martichou/sys_metrics" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1